<resources>
    <string name="app_name">Instagram</string>
    <string name="content_image">Content image</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">create an account</string>
    <string name="or">OR</string>
    <string name="caption">Write a caption...</string>
    <string name="post">Post</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="view_all_comments">View all comments</string>
    <string name="like">like</string>
    <string name="comment">comment</string>


    <plurals name="likes">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>

</resources>