<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right"
    android:orientation="vertical"
    tools:context=".fragments.ComposeFragment">


    <ImageButton
        android:id="@+id/btnCaptureImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/take_a_picture"
        android:src="@drawable/ic_baseline_camera_alt_24" />

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/grey"
        android:scaleType="fitCenter"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/caption"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:clickable="true"
        android:focusable="auto"
        android:gravity="end"
        android:text="@string/post"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>